      times. This makes ``get_revision_graph`` 2x faster. (John Arbash
      Meinel)

    * Fix ``VersionedFile.get_graph()`` to avoid using
      ``set.difference_update(other)``, which has bad scaling when
      ``other`` is large. This improves ``VF.get_graph([version_id])`` for
      a 12.5k graph from 2.9s down to 200ms. (John Arbash Meinel)

  LIBRARY API BREAKS:

    * Deprecated dictionary ``bzrlib.option.SHORT_OPTIONS`` removed.
      Options are now required to provide a help string and it must
      comply with the style guide by being one or more sentences with an
      initial capital and final period. (Martin Pool)

    * KnitIndex.get_parents now returns tuples. (Robert Collins)

  INTERNALS:

    * merge now uses ``iter_changes`` to calculate changes, which makes room for
      future performance increases.  It is also more consistent with other
      operations that perform comparisons, and reduces reliance on
      Tree.inventory.  (Aaron Bentley)

    * Refactoring of transport classes connected to a remote server.
      ConnectedTransport is a new class that serves as a basis for all
      transports needing to connect to a remote server.  transport.split_url
      have been deprecated, use the static method on the object instead. URL
      tests have been refactored too.
      (Vincent Ladeuil)

    * Better connection sharing for ConnectedTransport objects.
      transport.get_transport() now accepts a 'possible_transports' parameter.
      If a newly requested transport can share a connection with one of the
      list, it will.
      (Vincent Ladeuil)

    * Most functions now accept ``bzrlib.revision.NULL_REVISION`` to indicate
      the null revision, and consider using ``None`` for this purpose
      deprecated.  (Aaron Bentley)

    * New ``index`` module with abstract index functionality. This will be
      used during the planned changes in the repository layer. Currently the